Fixed top right line spacing

--- a/templates/spd/css/template.css
+++ b/templates/spd/css/template.css
@@ -105,6 +105,7 @@ h2
 	margin-top: 20px;
 	color: #9B9C9E;
 	font-size: 21px;
+	line-height: 25px;
 	text-align: right;
 	font-family: 'garamondregular';
 }
